[metadata]
name = classic-sql-storage
version = 0.0.1
description = Provides primitives for contextual transactions processing with SQLALchemy and base for repository class
author = Sergei Variasov
author_email = variasov@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/variasov/classic_sql_storage
project_urls =
    Bug Tracker = https://github.com/variasov/classic_sql_storage/issues
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta


[options]
packages = find_namespace:
python_requires = >=3.7
package_dir =
    = sources
install_requires =
    sqlalchemy~=1.4.23
    classic-components~=0.0.1


[options.packages.find]
where = sources

[options.extras_require]
dev =
    pytest~=6.2.5
    pytest-cov~=2.12.1
    twine~=3.4.2
    build~=0.7.0
